# geotessera

./: .gitignore  .readthedocs.yaml  CHANGES.md  LICENSE.md  README.md  environment.yml  generate_map.py  globe.html  main.py  pyproject.toml  umap_visualization.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: embedding-request.yml
.github/workflows/: ci.yml  conda.yml  update_map.yml
docs/: architecture.rst  cli_reference.rst  geotessera.rst  index.rst  modules.rst  quickstart.rst  tutorials.rst
geotessera/: __init__.py  cli.py  core.py  country.py  main.py  progress.py  registry.py  registry_2017.txt  registry_2018.txt  registry_2019.txt  registry_2020.txt  registry_2021.txt  registry_2022.txt  registry_2023.txt  registry_cli.py  registry_utils.py  tiles.py  visualization.py  web.py
source/: conf.py  index.rst
tessera/: __init__.py  cli.py  core.py  main.py
tests/: .gitattributes  cli.ps1  cli.t  cli.t.err  hash.t  hash.t.err  test_cli_discrete_export.py  test_dataset_version.py  test_landmask_utm_projections.py  test_tile_discovery.py  test_utm_projection_export.py  test_version_metadata.py  viz.t  viz.t.err  zarr.t  zarr.t.err
