[project]
name = "tessera"
version = "0.1.0"
description = "Python library interface to the Tessera geofoundation model embeddings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pooch",
    "tqdm>=4.67.1",
]

[tool.setuptools.package-data]
tessera = ["registry_2024.txt"]
