[project]
name = "geotessera"
version = "0.1.0"
description = "Python library interface to the Tessera geofoundation model embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pooch",
    "tqdm>=4.67.1",
    "numpy",
    "matplotlib",
    "geopandas",
]

[project.optional-dependencies]
visualize = []

[project.scripts]
geotessera = "geotessera.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geotessera*"]

[tool.setuptools.package-data]
geotessera = ["registry_2024.txt"]
