[project]
name = "geotessera"
version = "0.2.0"
description = "Python library interface to the Tessera geofoundation model embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pooch",
    "tqdm>=4.67.1",
    "numpy",
    "geopandas",
    "pandas",
    "matplotlib",
    "rasterio",
    "sphinx>=8.2.3",
]

[project.scripts]
geotessera = "geotessera.cli:main"
geotessera-registry = "geotessera.registry_cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geotessera*"]

[tool.setuptools.package-data]
geotessera = ["registry_2017.txt", "registry_2018.txt", "registry_2019.txt", "registry_2020.txt", "registry_2021.txt", "registry_2022.txt", "registry_2023.txt", "registry_2024.txt"]
